--- a/administrator/components/com_fields/forms/filter_fields.xml
+++ b/administrator/components/com_fields/forms/filter_fields.xml
@@ -21,7 +21,7 @@
 		<field
 			name="state"
 			type="status"
-			label="JOPTION_SELECT_PUBLISHED"
+			label="JSTATUS"
 			onchange="this.form.submit();"
 			>
 			<option value="">JOPTION_SELECT_PUBLISHED</option>
@@ -30,7 +30,7 @@
 		<field
 			name="group_id"
 			type="fieldgroups"
-			label="COM_FIELDS_VIEW_FIELDS_SELECT_GROUP"
+			label="COM_FIELDS_FIELD_GROUP_LABEL"
 			state="0,1,2"
 			onchange="this.form.submit();"
 			>
@@ -40,7 +40,7 @@
 		<field
 			name="assigned_cat_ids"
 			type="category"
-			label="COM_FIELDS_VIEW_FIELDS_SELECT_CATEGORY"
+			label="JCATEGORY"
 			onchange="this.form.submit();"
 			addfieldprefix="Joomla\Component\Categories\Administrator\Field"
 			>
@@ -50,7 +50,7 @@
 		<field
 			name="access"
 			type="accesslevel"
-			label="JOPTION_SELECT_ACCESS"
+			label="JGRID_HEADING_ACCESS"
 			onchange="this.form.submit();"
 			>
 			<option value="">JOPTION_SELECT_ACCESS</option>
@@ -59,7 +59,7 @@
 		<field
 			name="language"
 			type="contentlanguage"
-			label="JOPTION_SELECT_LANGUAGE"
+			label="JGRID_HEADING_LANGUAGE"
 			onchange="this.form.submit();"
 			>
 			<option value="">JOPTION_SELECT_LANGUAGE</option>
