--- a/administrator/components/com_workflow/forms/filter_workflows.xml
+++ b/administrator/components/com_workflow/forms/filter_workflows.xml
@@ -12,7 +12,7 @@
 		<field
 			name="published"
 			type="status"
-			label="JOPTION_SELECT_PUBLISHED"
+			label="JSTATUS"
 			onchange="this.form.submit();"
 			filter="-2,0,1"
 			>
