--- a/administrator/components/com_actionlogs/forms/filter_actionlogs.xml
+++ b/administrator/components/com_actionlogs/forms/filter_actionlogs.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form>
+<form addfieldprefix="Joomla\Component\Actionlogs\Administrator\Field">
 	<fields name="filter">
 		<field
 			name="search"
 			type="text"
 			inputmode="search"
-			description="COM_ACTIONLOGS_FILTER_SEARCH_DESC"
+			label="COM_ACTIONLOGS_FILTER_SEARCH_DESC"
+			description="COM_ACTIONLOGS_SEARCH_IN_NAME"
 			hint="JSEARCH_FILTER"
 		/>
 		<field
 			name="extension"
 			type="extension"
 			label="COM_ACTIONLOGS_EXTENSION"
-			description="COM_ACTIONLOGS_EXTENSION_FILTER_DESC"
 			onchange="this.form.submit()"
 			>
 			<option value="">COM_ACTIONLOGS_SELECT_EXTENSION</option>
@@ -20,8 +20,7 @@
 		<field
 			name="dateRange"
 			type="logsdaterange"
-			label="COM_ACTIONLOGS_OPTION_FILTER_DATE"
-			description="COM_ACTIONLOGS_OPTION_FILTER_DATE"
+			label="COM_ACTIONLOGS_DATE"
 			onchange="this.form.submit();"
 			>
 			<option value="">COM_ACTIONLOGS_OPTION_FILTER_DATE</option>
@@ -29,6 +28,7 @@
 		<field
 			name="user"
 			type="logcreator"
+			label="COM_ACTIONLOGS_NAME"
 			onchange="this.form.submit();"
 			>
 			<option value="">COM_ACTIONLOGS_SELECT_USER</option>
@@ -38,8 +38,7 @@
 		<field
 			name="fullordering"
 			type="list"
-			label="COM_ACTIONLOGS_LIST_FULL_ORDERING"
-			description="COM_ACTIONLOGS_LIST_FULL_ORDERING_DESC"
+			label="JGLOBAL_SORT_BY"
 			onchange="this.form.submit();"
 			default="a.id DESC"
 			validate="options"
@@ -51,8 +50,8 @@
 			<option value="a.extension DESC">COM_ACTIONLOGS_EXTENSION_DESC</option>
 			<option value="a.log_date ASC">JDATE_ASC</option>
 			<option value="a.log_date DESC">JDATE_DESC</option>
-			<option value="a.user_id ASC">COM_ACTIONLOGS_NAME_ASC</option>
-			<option value="a.user_id DESC">COM_ACTIONLOGS_NAME_DESC</option>
+			<option value="a.user_id ASC">JGLOBAL_NAME_ASC</option>
+			<option value="a.user_id DESC">JGLOBAL_NAME_DESC</option>
 			<option value="a.id ASC">JGRID_HEADING_ID_ASC</option>
 			<option value="a.id DESC">JGRID_HEADING_ID_DESC</option>
 		</field>
@@ -61,8 +60,7 @@
 		<field
 			name="limit"
 			type="limitbox"
-			label="COM_ACTIONLOGS_LIST_LIMIT"
-			description="COM_ACTIONLOGS_LIST_LIMIT_DESC"
+			label="JGLOBAL_LIST_LIMIT"
 			class="input-mini"
 			onchange="this.form.submit();"
 			default="25"
