--- a/administrator/components/com_finder/forms/filter_index.xml
+++ b/administrator/components/com_finder/forms/filter_index.xml
@@ -13,7 +13,7 @@
 		<field
 			name="state"
 			type="status"
-			label="JOPTION_SELECT_PUBLISHED"
+			label="JSTATUS"
 			optionsFilter="0,1"
 			onchange="this.form.submit();"
 			>
@@ -23,7 +23,7 @@
 		<field
 			name="type"
 			type="contenttypes"
-			label="COM_FINDER_MAPS_SELECT_TYPE"
+			label="COM_FINDER_MAPS_HEADING_TYPE"
 			onchange="this.form.submit();"
 			>
 			<option value="">COM_FINDER_MAPS_SELECT_TYPE</option>
@@ -32,7 +32,7 @@
 		<field
 			name="content_map"
 			type="contentmap"
-			label="COM_FINDER_FILTER_SELECT_CONTENT_MAP"
+			label="COM_FINDER_MAPS_HEADING_CONTENT_MAP"
 			onchange="this.form.submit();"
 			>
 			<option value="">COM_FINDER_FILTER_SELECT_CONTENT_MAP</option>
@@ -41,7 +41,7 @@
 		<field
 			name="language"
 			type="contentlanguage"
-			label="JOPTION_SELECT_LANGUAGE"
+			label="JGRID_HEADING_LANGUAGE"
 			onchange="this.form.submit();"
 			>
 			<option value="">JOPTION_SELECT_LANGUAGE</option>
