--- a/administrator/components/com_finder/forms/filter_maps.xml
+++ b/administrator/components/com_finder/forms/filter_maps.xml
@@ -13,7 +13,7 @@
 		<field
 			name="state"
 			type="status"
-			label="JOPTION_SELECT_PUBLISHED"
+			label="JSTATUS"
 			optionsFilter="0,1"
 			onchange="this.form.submit();"
 			>
@@ -23,7 +23,7 @@
 		<field
 			name="branch"
 			type="branches"
-			label="COM_FINDER_MAPS_SELECT_BRANCH"
+			label="COM_FINDER_MAPS_HEADING_BRANCH"
 			default="0"
 			onchange="this.form.submit();"
 		/>
@@ -31,7 +31,7 @@
 		<field
 			name="level"
 			type="integer"
-			label="JOPTION_SELECT_MAX_LEVELS"
+			label="JGLOBAL_MAXLEVEL_LABEL"
 			first="1"
 			last="2"
 			step="1"
