--- a/administrator/components/com_mails/forms/filter_templates.xml
+++ b/administrator/components/com_mails/forms/filter_templates.xml
@@ -13,7 +13,7 @@
 		<field
 			name="language"
 			type="contentlanguage"
-			label="JOPTION_SELECT_LANGUAGE"
+			label="JGRID_HEADING_LANGUAGE"
 			onchange="this.form.submit();"
 			>
 			<option value="">JOPTION_SELECT_LANGUAGE</option>
@@ -23,7 +23,7 @@
 		<field
 			name="extension"
 			type="sql"
-			label="COM_MAILS_FILTER_OPTION_SELECT_EXTENSION"
+			label="COM_MAILS_HEADING_COMPONENT"
 			query="SELECT SUBSTRING(template_id, 1, POSITION('.' IN template_id) - 1) AS value, SUBSTRING(template_id, 1, POSITION('.' IN template_id) - 1) AS extension FROM #__mail_templates GROUP BY extension ORDER BY extension ASC"
 			translate="true"
 			onchange="this.form.submit();"
