Replace inline style width 30%, 40%, 60%, 80% with w-30, w-40, w-60, w-80 (#29012)

--- a/administrator/templates/atum/scss/blocks/_utilities.scss
+++ b/administrator/templates/atum/scss/blocks/_utilities.scss
@@ -99,3 +99,19 @@
 .w-20 {
   width: 20%;
 }
+
+.w-30 {
+  width: 30%;
+}
+
+.w-40 {
+  width: 40%;
+}
+
+.w-60 {
+  width: 60%;
+}
+
+.w-80 {
+  width: 80%;
+}
