Replace inline style width 3%, 6%, 7% with w-3, w-6, w-7 (#29027)

--- a/administrator/templates/atum/scss/blocks/_utilities.scss
+++ b/administrator/templates/atum/scss/blocks/_utilities.scss
@@ -84,8 +84,20 @@
   width: 1%;
 }
 
+.w-3 {
+  width: 3%;
+}
+
 .w-5 {
   width: 5%;
+}
+
+.w-6 {
+  width: 6%;
+}
+
+.w-7 {
+  width: 7%;
 }
 
 .w-10 {
