[4.0] com_menu - Change Featured Icon to Home Icon in (#29016)
* Change Featured Icon to Home Icon in com_menu

* Change Icon class

* Change Default icon in sidebar menu too

* Different class for disabled Home item

* Update administrator/components/com_menus/tmpl/items/default.php

Co-authored-by: Quy <quy@fluxbb.org>

Co-authored-by: Quy <quy@fluxbb.org>

--- a/administrator/templates/atum/scss/blocks/_icons.scss
+++ b/administrator/templates/atum/scss/blocks/_icons.scss
@@ -73,6 +73,16 @@
     color: var(--atum-text-dark);
     border: 0;
   }
+
+  &.home-disabled {
+    opacity: 1;
+    cursor: not-allowed;
+  }
+
+  &.disabled .icon-home {
+    color: $state-warning-bg;
+    border-color: $state-warning-bg;
+  }
 }
 
 .icon-joomla::before {
