Increase Opacity of disabled Featured Icons

--- a/administrator/templates/atum/scss/blocks/_icons.scss
+++ b/administrator/templates/atum/scss/blocks/_icons.scss
@@ -74,7 +74,8 @@
     border: 0;
   }
 
-  &.home-disabled {
+  &.home-disabled,
+  &.featured-disabled {
     opacity: 1;
     cursor: not-allowed;
   }
