[4.0] Template Atum closed sidebar hover fix (#29023)

--- a/administrator/templates/atum/scss/blocks/_sidebar.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar.scss
@@ -182,10 +182,27 @@
     display: none;
   }
 
+  .main-nav,
+  .main-nav li {
+    max-width: 3rem;
+  }
+
+  .main-nav a:hover {
+    max-width: 3rem;
+    position: relative;
+  }
+
   .main-nav a:hover .sidebar-item-title {
-    display: inline-block;
-    min-width: $sidebar-width;
     background-color: var(--atum-sidebar-link-color);
+    position: absolute;
+    left: 3.5rem;
+    font-size: 0.875rem;
+    border-radius: 0.3rem;
+    top: 0.5rem;
+    display: inline-block;
+    pointer-events: none;
+    padding: 0.2rem;
+    white-space: pre;
   }
 
   .main-nav > li > ul {
