Replace inline style width 12%, 35% with w-12, w-35 (#29056)

--- a/administrator/templates/atum/scss/blocks/_utilities.scss
+++ b/administrator/templates/atum/scss/blocks/_utilities.scss
@@ -104,6 +104,10 @@
   width: 10%;
 }
 
+.w-12 {
+  width: 12%;
+}
+
 .w-15 {
   width: 15%;
 }
@@ -114,6 +118,10 @@
 
 .w-30 {
   width: 30%;
+}
+
+.w-35 {
+  width: 35%;
 }
 
 .w-40 {
