--- a/administrator/templates/atum/scss/blocks/_sidebar.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar.scss
@@ -132,6 +132,7 @@
       justify-content: center;
       width: 2rem;
       font-family: "Font Awesome 5 Free";
+      font-weight: 900;
 
       [dir="ltr"] & {
         content: "\f054";
