--- a/administrator/templates/atum/scss/blocks/_toolbar.scss
+++ b/administrator/templates/atum/scss/blocks/_toolbar.scss
@@ -90,6 +90,7 @@
         font-family: "Font Awesome 5 Free";
         content: "\f078";
         border: 0;
+        font-weight: 900;
       }
     }
 
