--- a/administrator/templates/atum/scss/template-rtl.scss
+++ b/administrator/templates/atum/scss/template-rtl.scss
@@ -30,7 +30,8 @@ ul {
 
 // Header
 .header {
-  .page-title [class^='icon-'] {
+  .page-title [class^='icon-'],
+  .page-title [class^='fa-'] {
     margin-right: 0;
     margin-left: 15px;
   }
