Missing check icon (#29153)

--- a/administrator/components/com_media/resources/styles/components/_media-browser.scss
+++ b/administrator/components/com_media/resources/styles/components/_media-browser.scss
@@ -95,6 +95,7 @@
     height: calc(#{$grid-item-icon-size} * 1.3);
     font-family: "Font Awesome 5 Free";
     font-size: $grid-item-icon-size;
+    font-weight: 900;
     line-height: calc(#{$grid-item-icon-size} * 1.3);
     text-align: center;
     content: "\f00c";
