Toggler icons missing (#29205)

--- a/administrator/templates/atum/scss/blocks/_sidebar.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar.scss
@@ -246,7 +246,7 @@
     }
 
     .navbar-toggler-icon::before {
-      font: normal normal normal 30px/1 "Font Awesome 5 Free";
+      font: normal normal 900 30px/1 "Font Awesome 5 Free";
       color: var(--toggle-color);
       content: "\f00d";
     }
