--- a/administrator/templates/atum/scss/blocks/_toolbar.scss
+++ b/administrator/templates/atum/scss/blocks/_toolbar.scss
@@ -147,7 +147,7 @@
     }
 
     .toggler-toolbar-icon::before {
-      font: normal normal normal 30px/1 'Font Awesome 5 Free';
+      font: normal normal 900 30px/1 'Font Awesome 5 Free';
       color: var(--toggle-color);
       content: "\f00d";
     }
