Change header_class type from text to textarea (#29201)
* Change header_class type from text to textarea

Change the type for header_class to textarea to resolve https://github.com/joomla/joomla-cms/issues/29183

* Update administrator/components/com_modules/forms/advanced.xml

Co-authored-by: Quy <quy@fluxbb.org>

Co-authored-by: Tobias Zulauf <zero-24@users.noreply.github.com>
Co-authored-by: Quy <quy@fluxbb.org>

--- a/administrator/components/com_modules/forms/advanced.xml
+++ b/administrator/components/com_modules/forms/advanced.xml
@@ -35,8 +35,9 @@
 
 			<field
 				name="header_class"
-				type="text"
+				type="textarea"
 				label="COM_MODULES_FIELD_HEADER_CLASS_LABEL"
+				rows="3"
 			/>
 		</fieldset>
 	</fields>
