--- a/administrator/components/com_workflow/forms/filter_workflows.xml
+++ b/administrator/components/com_workflow/forms/filter_workflows.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<form>
+<form addfieldprefix="Joomla\Component\Workflow\Administrator\Field">
+	<fieldset name="group">
+		<field
+			name="extension"
+			type="workflowcontexts"
+			filtermode="selector"
+			onchange="this.form.submit();"
+		/>
+	</fieldset>
 	<fields name="filter">
 		<field
 			name="search"
