--- a/administrator/components/com_content/forms/filter_articles.xml
+++ b/administrator/components/com_content/forms/filter_articles.xml
@@ -29,7 +29,7 @@
 			label="JOPTION_SELECT_STAGE"
 			onchange="this.form.submit();"
 			activeonly="true"
-			extension="com_content"
+			extension="com_content.article"
 			>
 			<option value="">JOPTION_SELECT_STAGE</option>
 		</field>
