--- a/administrator/components/com_content/forms/filter_featured.xml
+++ b/administrator/components/com_content/forms/filter_featured.xml
@@ -26,7 +26,7 @@
 			type="status"
 			label="JOPTION_SELECT_PUBLISHED"
 			onchange="this.form.submit();"
-			extension="com_content"
+			extension="com_content.article"
 			>
 			<option value="">JOPTION_SELECT_PUBLISHED</option>
 		</field>
