[4.0] Indicate current menu item in sidebar (#29444)

--- a/administrator/templates/atum/scss/blocks/_sidebar.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar.scss
@@ -144,6 +144,10 @@
     }
   }
 
+  a.mm-active {
+    background-color: $gray-300;
+  } 
+
   .mm-active > .has-arrow::after {
     content: "\f078";
   }
