--- a/administrator/templates/atum/scss/blocks/_treeselect.scss
+++ b/administrator/templates/atum/scss/blocks/_treeselect.scss
@@ -29,6 +29,7 @@
       [dir=rtl] & {
         right: ($treeselect-indent - 15px);
         left: 0;
+        margin: 0;
       }
     }
 
@@ -56,7 +57,7 @@
     }
 
     li {
-      padding-left: $treeselect-indent;
+      padding-inline-start: $treeselect-indent;
     }
   }
 
