--- a/administrator/templates/atum/scss/pages/_com_modules.scss
+++ b/administrator/templates/atum/scss/pages/_com_modules.scss
@@ -1,6 +1,6 @@
 .new-modules {
   .card-columns {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   }
 
   .card {
