[4.0] Fix bootstrap tabs active background (#29305)

--- a/administrator/templates/atum/scss/_variables.scss
+++ b/administrator/templates/atum/scss/_variables.scss
@@ -157,7 +157,7 @@ $dropdown-spacer:                  0;
 
 // Tabs
 $nav-tabs-border-width:            0;
-$nav-tabs-link-active-bg:          rgba($black, .2); //is it used?
+$nav-tabs-link-active-bg:          rgba($gray-100, .2); // Used by bootstrap tabs
 
 // Cards
 $card-border-width:                0;
