--- a/components/com_config/forms/modules_advanced.xml
+++ b/components/com_config/forms/modules_advanced.xml
@@ -29,8 +29,9 @@
 
 			<field
 				name="header_class"
-				type="text"
+				type="textarea"
 				label="COM_MODULES_FIELD_HEADER_CLASS_LABEL"
+				rows="3"
 			/>
 
 			<field
