--- a/installation/template/scss/template.scss
+++ b/installation/template/scss/template.scss
@@ -16,6 +16,9 @@ $fa-font-path: "../../../media/vendor/fontawesome-free/webfonts";
 @import "../../../administrator/templates/atum/scss/blocks/header";
 @import "../../../administrator/templates/atum/scss/vendor/bootstrap/custom-forms";
 
+// Safari fix
+@import "../../../administrator/templates/atum/scss/vendor/bootstrap/reboot";
+
 body {
   background: var(--atum-bg-light);
 }
