--- a/administrator/templates/atum/scss/blocks/_modals.scss
+++ b/administrator/templates/atum/scss/blocks/_modals.scss
@@ -6,6 +6,7 @@
     padding: 0 22px;
     margin-right: .5rem;
     font-size: 1rem;
+    line-height: 2.3rem;
     color: var(--atum-text-dark);
     background: var(--white);
     border-color: var(--whiteoffset);
