:bug: add missing $ to scss variable cassiopeia-grid-gutter (#29856)

--- a/templates/cassiopeia/scss/blocks/_css-grid.scss
+++ b/templates/cassiopeia/scss/blocks/_css-grid.scss
@@ -31,7 +31,7 @@
       flex-direction: column;
 
       > div + div {
-        margin-top: cassiopeia-grid-gutter;
+        margin-top: $cassiopeia-grid-gutter;
       }
     }
 
