[4.0] Restore com_admin profile view (#29251)
* Restore com_admin profile view

* Restore language strings

* Remove help site field

* Simplify layout

* Line length

* Add return URL

* Fix redirects

* Move to src directory

* Correct link

* Fix TFA

* Add back com_admin.profile context

* CS

* CS

* CS

Co-authored-by: Quy <quy@fluxbb.org>

* Use com_users form

* Restore string

* Revert "Restore string"

This reverts commit 72286888575c1c54e9871f49c0d3fc601ca9cba6.

* Revert "Use com_users form"

This reverts commit da295c140c7607b7b81f8decb2ae258e03e743a6.

* Use com_admin form

* Map com_admin.profile context

* Missing strings

* Rename strings

* Missing string

* Alpha sort

* TFA switcher

* Cleanup

* Add password meter

* Remove unused string

Co-authored-by: Quy <quy@fluxbb.org>

--- a/administrator/components/com_users/forms/user.xml
+++ b/administrator/components/com_users/forms/user.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
-	<fieldset name="user_details">
+	<fieldset name="user_details" label="COM_USERS_USER_ACCOUNT_DETAILS">
 		<field
 			name="name"
 			type="text"
