[4.0] Media Action plugins (#29970)
* [4.0] Media Action plugins

This PR does the following

1. removes unused strings
2. changes labelclass="d-none" to hiddenLabel in the xml
3. adds missing labels (even if they are not visible)

ToDo in a later PR change the radio buttons in rotate to real buttons in a button group. The current code breaks accessibility but thats for another PR

* xml

--- a/plugins/media-action/resize/form/resize.xml
+++ b/plugins/media-action/resize/form/resize.xml
@@ -30,9 +30,9 @@
 		<field
 			name="resize_w"
 			type="range"
-			label=""
+			label="PLG_MEDIA-ACTION_RESIZE_PARAM_WIDTH_SLIDER"
 			value="0"
-			labelclass="d-none"
+			hiddenLabel="true"
 		/>
 
 		<field
@@ -53,9 +53,9 @@
 		<field
 			name="resize_h"
 			type="range"
-			label=""
+			label="PLG_MEDIA-ACTION_RESIZE_PARAM_HEIGHT_SLIDER"
 			value="0"
-			labelclass="d-none"
+			hiddenLabel="true"
 		/>
 	</fieldset>
 </form>
