--- a/plugins/media-action/crop/form/crop.xml
+++ b/plugins/media-action/crop/form/crop.xml
@@ -60,6 +60,7 @@
 		<field
 			name="aspectRatio"
 			type="groupedlist"
+			label="PLG_MEDIA-ACTION_CROP_PARAM_ASPECT"
 			hiddenLabel="true"
 			class="crop-aspect-ratio-options"
 			default="1.111"
