--- a/templates/cassiopeia/scss/blocks/_modals.scss
+++ b/templates/cassiopeia/scss/blocks/_modals.scss
@@ -20,7 +20,9 @@
 
   .close {
     width: $modal-header-height;
+    padding: 0;
     margin-top: 0;
+    margin-bottom: 0;
     font-size: 2rem;
     line-height: $modal-header-height;
 
@@ -34,10 +36,6 @@
       border-right: 1px solid $cassiopeia-border-color;
     }
   }
-}
-
-.modal-body {
-  padding: 0;
 }
 
 .modal-title {
