[4.0] Cassiopea: Fixing modals custom-select fields display (#30097)

--- a/templates/cassiopeia/scss/_variables.scss
+++ b/templates/cassiopeia/scss/_variables.scss
@@ -135,7 +135,7 @@ $treeselect-line-height:             2.2rem;
 $list-group-bg:                      $white-offset;
 
 // Custom form
-$custom-select-bg:                   $white-offset;
+$custom-select-bg:                   $gray-200;
 
 // Custom form
 $custom-select-indicator-padding:    3rem;
