--- a/administrator/templates/atum/scss/blocks/_header.scss
+++ b/administrator/templates/atum/scss/blocks/_header.scss
@@ -86,8 +86,8 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 
-    [class^='icon-'],
-    [class^='fa-'] {
+    [class^="icon-"],
+    [class^="fa-"] {
       margin-inline-end: .625rem;
       font-size: 1rem;
     }
