--- a/administrator/templates/atum/scss/blocks/_utilities.scss
+++ b/administrator/templates/atum/scss/blocks/_utilities.scss
@@ -26,8 +26,8 @@
 
 // Column Count
 
-[class^='column-'],
-[class*=' column-'] {
+[class^="column-"],
+[class*=" column-"] {
   padding-bottom: 1rem;
   column-gap: 2rem;
 
