--- a/administrator/templates/atum/scss/blocks/_form.scss
+++ b/administrator/templates/atum/scss/blocks/_form.scss
@@ -114,7 +114,7 @@ legend {
   display: block;
 }
 
-[aria-grabbed='true'] {
+[aria-grabbed="true"] {
   box-shadow: $input-box-shadow;
 }
 
@@ -130,9 +130,9 @@ legend {
   padding: .5em;
   margin: .25em;
   color: $white;
+  text-align: start;
   background: $black;
   border-radius: .2rem;
-  text-align: start;
 }
 
 // reveal associated tooltip on focus
