--- a/administrator/templates/atum/scss/blocks/_global.scss
+++ b/administrator/templates/atum/scss/blocks/_global.scss
@@ -9,9 +9,9 @@ html {
 }
 
 body {
-  min-height: 100%;
   display: flex;
   flex-direction: column;
+  min-height: 100%;
   padding: 0;
   margin: 0;
   text-align: start;
@@ -184,7 +184,7 @@ a[target="_blank"]::before {
 
 .text-muted {
   color: var(--atum-text-dark) !important;
-  opacity: 0.7;
+  opacity: .7;
 }
 
 .card-columns {
