--- a/administrator/templates/atum/scss/blocks/_icons.scss
+++ b/administrator/templates/atum/scss/blocks/_icons.scss
@@ -35,10 +35,10 @@
   background-color: transparent;
   border: 0;
 
-  [class^='icon-'],
-  [class*=' icon-'],
-  [class^='fa-'],
-  [class*=' fa-'] {
+  [class^="icon-"],
+  [class*=" icon-"],
+  [class^="fa-"],
+  [class*=" fa-"] {
     width: 26px;
     height: 26px;
     font-size: 1rem;
@@ -78,8 +78,8 @@
   &.featured-disabled,
   &.color-featured-disabled,
   &.fa-star-disabled {
-    opacity: 1;
     cursor: not-allowed;
+    opacity: 1;
   }
 
   &.disabled .icon-home,
