--- a/templates/cassiopeia/scss/blocks/_footer.scss
+++ b/templates/cassiopeia/scss/blocks/_footer.scss
@@ -8,7 +8,6 @@
     background: $cassiopeia-template-color;
     border-radius: 3px;
 
-    @include margin('right', 5px);
+    @include margin("right", 5px);
   }
-
 }
