--- a/administrator/templates/atum/scss/blocks/_icons.scss
+++ b/administrator/templates/atum/scss/blocks/_icons.scss
@@ -12,7 +12,8 @@
   color: $white;
 }
 
-.icon-publish {
+.icon-publish,
+.fa-check {
   color: theme-color("success");
 
   .dropdown-status-group & {
@@ -20,8 +21,7 @@
   }
 }
 
-.icon-unpublish,
-.fa-times {
+.icon-unpublish {
   color: theme-color("danger");
 
   .dropdown-status-group & {
@@ -35,8 +35,10 @@
   background-color: transparent;
   border: 0;
 
-  [class^='icon-'],
-  [class*=' icon-'] {
+  [class^="icon-"],
+  [class*=" icon-"],
+  [class^="fa-"],
+  [class*=" fa-"] {
     width: 26px;
     height: 26px;
     font-size: 1rem;
@@ -46,25 +48,24 @@
     border-radius: 50%;
   }
 
-  .icon-publish {
+  .icon-publish,
+  .fa-check {
     color: var(--success);
     border-color: var(--success);
   }
 
-  .icon-featured,
-  .icon-color-featured {
+  .icon-color-featured,
+  .fas.fa-star.featured {
     color: $state-warning-bg;
     border-color: $state-warning-bg;
   }
 
-  .icon-archive,
-  .fa-folder {
+  .icon-archive {
     color: var(--atum-text-dark);
     border-color: $gray-700;
   }
 
-  .icon-checkedout,
-  .fa-lock {
+  .icon-checkedout {
     width: auto;
     height: auto;
     font-size: 1.2rem;
@@ -77,8 +78,8 @@
   &.featured-disabled,
   &.color-featured-disabled,
   &.fa-star-disabled {
-    opacity: 1;
     cursor: not-allowed;
+    opacity: 1;
   }
 
   &.disabled .icon-home,
