--- a/administrator/templates/atum/scss/blocks/_sidebar.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar.scss
@@ -16,6 +16,7 @@
     .menu-dashboard,
     .menu-quicktask {
       color: var(--atum-sidebar-link-color);
+      text-decoration: none;
 
       &:hover {
         background-color: var(--atum-link-color);
