--- a/administrator/templates/atum/scss/_variables.scss
+++ b/administrator/templates/atum/scss/_variables.scss
@@ -219,10 +219,10 @@ $input-btn-submenu-icon-distance:   1rem;
 $custom-select-indicator-padding:    3rem;
 $custom-select-bg:                   var(--atum-bg-light);
 $custom-select-bg-size:              116rem;
-$custom-select-indicator:            url(../images/select-bg.svg);
-$custom-select-indicator-rtl:        url(../images/select-bg-rtl.svg);
-$custom-select-indicator-active:     url(../../../images/select-bg.svg);
-$custom-select-indicator-active-rtl: url(../../../images/select-bg-rtl.svg);
+$custom-select-indicator:            url("../images/select-bg.svg");
+$custom-select-indicator-rtl:        url("../images/select-bg-rtl.svg");
+$custom-select-indicator-active:     url("../../../images/select-bg.svg");
+$custom-select-indicator-active-rtl: url("../../../images/select-bg-rtl.svg");
 $custom-select-background:           $custom-select-indicator no-repeat right center / $custom-select-bg-size; // Used so we can have multiple background elements (e.g., arrow and feedback icon)
 $custom-select-background-rtl:       $custom-select-indicator-rtl no-repeat left center / $custom-select-bg-size; // Used so we can have multiple background elements (e.g., arrow and feedback icon)
 $custom-select-box-shadow:           $atum-box-shadow;
