Fixing new violations

--- a/administrator/templates/atum/scss/blocks/_header.scss
+++ b/administrator/templates/atum/scss/blocks/_header.scss
@@ -32,15 +32,15 @@
 
   .logo {
     display: flex;
-    height: 100%;
-    width: $sidebar-width;
     flex-flow: row nowrap;
     align-items: center;
-    transition: all 0.3s ease-in-out;
+    width: $sidebar-width;
+    height: 100%;
+    transition: all .3s ease-in-out;
 
     &.small {
       width: $sidebar-width-closed;
-      transition: all 0.3s ease-in-out;
+      transition: all .3s ease-in-out;
 
       svg,
       img {
