--- a/administrator/templates/atum/scss/blocks/_global.scss
+++ b/administrator/templates/atum/scss/blocks/_global.scss
@@ -167,12 +167,12 @@ body .container-main {
 }
 
 // extern links with icons
-a[target="_blank"]::after {
+a[target="_blank"]::before {
   font-family: "Font Awesome 5 Free";
   font-size: 14px;
   font-weight: 900;
   content: "\f35d";
-  padding-left: 5px;
+  padding-right: 5px;
 }
 
 #wrapper {
