[4.0] Add padding to external link icon (#30250)

--- a/administrator/templates/atum/scss/blocks/_global.scss
+++ b/administrator/templates/atum/scss/blocks/_global.scss
@@ -168,6 +168,7 @@ body .container-main {
 
 // extern links with icons
 a[target="_blank"]::before {
+  padding-right: 3px;
   font-family: "Font Awesome 5 Free";
   font-size: 14px;
   font-weight: 900;
