--- a/templates/cassiopeia/scss/blocks/_icons.scss
+++ b/templates/cassiopeia/scss/blocks/_icons.scss
@@ -14,7 +14,7 @@
 
 .icon-publish,
 .fa-check {
-  color: theme-color("success");
+  color: $white-offset;
 
   .dropdown-status-group & {
     color: inherit;
@@ -23,7 +23,7 @@
 
 .icon-unpublish,
 .fas.fa-times {
-  color: theme-color("danger");
+  color: $white-offset;
 
   .dropdown-status-group & {
     color: inherit;
