--- a/administrator/templates/atum/scss/blocks/_sidebar.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar.scss
@@ -94,7 +94,7 @@
 
     .menu-dashboard,
     .menu-quicktask {
-      > a > .fas {
+      > a {
         display: inline-flex;
         align-items: center;
         padding: .9rem;
