--- a/administrator/templates/atum/scss/blocks/_modals.scss
+++ b/administrator/templates/atum/scss/blocks/_modals.scss
@@ -9,7 +9,7 @@
     line-height: 2.3rem;
     color: var(--atum-text-dark);
     background: var(--white);
-    border-color: var(--whiteoffset);
+    border-color: var(--white-offset);
     box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, .25);
   }
 
