--- a/administrator/templates/atum/scss/blocks/_icons.scss
+++ b/administrator/templates/atum/scss/blocks/_icons.scss
@@ -14,15 +14,16 @@
 
 .icon-publish,
 .fa-check {
-  color: theme-color("success");
+  color: $whiteoffset;
 
   .dropdown-status-group & {
     color: inherit;
   }
 }
 
-.icon-unpublish {
-  color: theme-color("danger");
+.icon-unpublish,
+.fa-times {
+  color: $whiteoffset;
 
   .dropdown-status-group & {
     color: inherit;
@@ -60,12 +61,14 @@
     border-color: $state-warning-bg;
   }
 
-  .icon-archive {
+  .icon-archive,
+  .fa-folder {
     color: var(--atum-text-dark);
     border-color: $gray-700;
   }
 
-  .icon-checkedout {
+  .icon-checkedout,
+  .fa-lock {
     width: auto;
     height: auto;
     font-size: 1.2rem;
