--- a/templates/cassiopeia/scss/template.scss
+++ b/templates/cassiopeia/scss/template.scss
@@ -35,6 +35,7 @@
 @import "blocks/form";
 @import "blocks/frontend-edit";
 @import "blocks/header";
+@import "blocks/metismenu";
 @import "blocks/icons";
 @import "blocks/iframe";
 @import "blocks/layout";
