--- a/templates/cassiopeia/scss/template.scss
+++ b/templates/cassiopeia/scss/template.scss
@@ -58,6 +58,7 @@
 @import "vendor/bootstrap/table";
 @import "vendor/chosen";
 @import "vendor/dragula";
+@import "vendor/metismenu/metismenu";
 @import "vendor/minicolors";
 @import "vendor/tinymce";
 
