--- a/templates/cassiopeia/scss/_variables.scss
+++ b/templates/cassiopeia/scss/_variables.scss
@@ -77,9 +77,9 @@ $theme-colors: (
 $cassiopeia-toolbar-line-height:         1.8rem;
 
 // Fonts
-$font-family-base:                   "Fira Sans", Arial, sans-serif;
+//$font-family-base:                   "Fira Sans", Arial, sans-serif;
 $cassiopeia-inverted-text-color:     $cassiopeia-template-color;
-$font-size-root:                     14px;
+$font-size-root:                     16px;
 $h1-font-size:                       1.857rem;
 $h2-font-size:                       1.571rem;
 $h3-font-size:                       1.286rem;
