[4.0] Installation: Adding a hint in Password field

--- a/installation/forms/setup.xml
+++ b/installation/forms/setup.xml
@@ -50,6 +50,7 @@
 			name="admin_password"
 			type="password"
 			label="INSTL_ADMIN_PASSWORD_DESC"
+			hint="INSTL_ADMIN_PASSWORD_LENGTH"
 			id="admin_password"
 			class="form-control"
 			required="true"
