--- a/installation/forms/setup.xml
+++ b/installation/forms/setup.xml
@@ -50,9 +50,8 @@
 			name="admin_password"
 			type="password"
 			label="INSTL_ADMIN_PASSWORD_DESC"
-			hint="INSTL_ADMIN_PASSWORD_LENGTH"
+			description="INSTL_ADMIN_PASSWORD_LENGTH"
 			id="admin_password"
-			class="form-control"
 			required="true"
 			autocomplete="new-password"
 			validate="password"
