Improvements on metis menu
- added an "if parent" in heading and separator to add arrow class
- reverted $class[] because it was not working
- minor style changes

--- a/templates/cassiopeia/scss/blocks/_header.scss
+++ b/templates/cassiopeia/scss/blocks/_header.scss
@@ -109,7 +109,7 @@
     > a {
       position: relative;
       display: block;
-      padding: .25rem 0 0;
+      padding: 0;
       color: $white;
       text-decoration: none;
     }
